# ppp-expert-ia

./: .env.example  .gitignore  API.md  ARCH.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  PERFORMANCE.md  PROJECT.md  README.md  ROADMAP.md  SCALABILITY.md  SECURITY.md  SETUP.md  TESTING.md  TRADEOFFS.md  TROUBLESHOOTING.md  conftest.py  pyproject.toml  requirements.txt  teste_defaults.py  teste_environment.py
docs/: PROJECT_MASTER.md
docs/00_PROJETO/: ARVORE_PROJETO.txt  CHECKPOINT.md  CONTINUAR_PROJETO.md  GOVERNANCA.md  STATUS_DO_PROJETO.md
docs/01_SPRINTS/: Sprint_001.md
docs/03_TECNICO/: DOMAIN_APPLICATION_LOGGING.md  DT-0014-CF00403-SETTINGS.md  INFRASTRUCTURE_LOGGING.md  LOGGING.md  LOGGING_INTEGRATION.md  SETTINGS.md
docs/05_REQUISITOS/: CF-001-Version.md  REQ-0002_Environment.md  REQ-0003_Defaults.md  REQ-0003_Settings.md  REQ-0005_Logger.md  REQ-0006_Logger_Integration.md  REQ-0007_Domain_Logger.md  REQ-0008_Infrastructure_Logger.md  REQ-0009_Usuario_PPP.md  REQ-0010_Usuario_UseCases.md  REQ-0011_API_REST.md  REQ-0012_Testes_E2E.md  REQ-0013_Architecture_Documentation.md  REQ-0014_Database_Integration.md  REQ-0015_FastAPI_Integration.md  REQ-0016_Technical_Documentation.md  REQ-CF-001_Version.md
docs/06_ENGINEERING_REVIEW/: CF-009_E2E_Tests_ER.md
docs/07_ADR/: ADR-0002_Estrategia_Imports.md
docs/07_LIVRO/: CF-009_E2E_Tests_Chapter.md
docs/08_DIARIO_ENGENHARIA/: CF-009_E2E_Tests_Diary.md
docs/10_LIVRO/: CAP-0002_Environment_e_Enums.md  (+8 more)
src/: app.py  initializer.py  main.py  test_paths.py
tests/: test_environment.py
(+81 files in other folders)
